@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2024
+ * Copyright (c) 2018-2025
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -89,15 +89,20 @@ public final class MethodSymbolComputer
       return ctx;
     }
 
+    if (!declaration.annotation().isEmpty()) {
+      startNode = declaration.annotation().get(0).AMPERSAND();
+    }
+
     MethodSymbol methodSymbol = createMethodSymbol(
       startNode,
       stopNode,
+      declaration.FUNCTION_KEYWORD().getSymbol(),
       declaration.subName().getStart(),
       declaration.paramList(),
       true,
       declaration.EXPORT_KEYWORD() != null,
       getCompilerDirective(declaration.compilerDirective()),
-      getAnnotations(declaration.annotation()));
+      createAnnotations(declaration.annotation()));
 
     methods.add(methodSymbol);
 
@@ -119,15 +124,20 @@ public final class MethodSymbolComputer
       return ctx;
     }
 
+    if (!declaration.annotation().isEmpty()) {
+      startNode = declaration.annotation().get(0).AMPERSAND();
+    }
+
     MethodSymbol methodSymbol = createMethodSymbol(
       startNode,
       stopNode,
+      declaration.PROCEDURE_KEYWORD().getSymbol(),
       declaration.subName().getStart(),
       declaration.paramList(),
       false,
       declaration.EXPORT_KEYWORD() != null,
       getCompilerDirective(declaration.compilerDirective()),
-      getAnnotations(declaration.annotation())
+      createAnnotations(declaration.annotation())
     );
 
     methods.add(methodSymbol);
@@ -182,6 +192,7 @@ public final class MethodSymbolComputer
   private MethodSymbol createMethodSymbol(
     TerminalNode startNode,
     TerminalNode stopNode,
+    Token startOfMethod,
     Token subName,
     BSLParser.ParamListContext paramList,
     boolean function,
@@ -189,7 +200,8 @@ public final class MethodSymbolComputer
     Optional<CompilerDirectiveKind> compilerDirective,
     List<Annotation> annotations
   ) {
-    Optional<MethodDescription> description = createDescription(startNode.getSymbol());
+    Optional<MethodDescription> description = createDescription(startOfMethod)
+      .or(() -> createDescription(startNode.getSymbol()));
     boolean deprecated = description
       .map(MethodDescription::isDeprecated)
       .orElse(false);
@@ -233,10 +245,11 @@ public final class MethodSymbolComputer
           .name(parameterName)
           .byValue(param.VAL_KEYWORD() != null)
           .defaultValue(getDefaultValue(param))
+          .annotations(createAnnotations(param.annotation()))
           .range(getParameterRange(param))
           .description(getParameterDescription(parameterName, description))
           .build();
-      }).collect(Collectors.toList());
+      }).toList();
   }
 
   private static ParameterDefinition.DefaultValue getDefaultValue(BSLParser.ParamContext param) {
@@ -310,10 +323,10 @@ public final class MethodSymbolComputer
 
   }
 
-  private static List<Annotation> getAnnotations(List<? extends BSLParser.AnnotationContext> annotationContext) {
-    return annotationContext.stream()
+  private static List<Annotation> createAnnotations(List<? extends BSLParser.AnnotationContext> annotationContexts) {
+    return annotationContexts.stream()
       .map(MethodSymbolComputer::createAnnotation)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private static Annotation createAnnotation(BSLParser.AnnotationContext annotation) {
@@ -334,7 +347,7 @@ public final class MethodSymbolComputer
 
     return annotationParamsContext.annotationParam().stream()
       .map(MethodSymbolComputer::getAnnotationParam)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private static AnnotationParameterDefinition getAnnotationParam(BSLParser.AnnotationParamContext o) {
