@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2024
+ * Copyright (c) 2018-2025
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -33,13 +33,12 @@ import java.util.Collections;
 import java.util.Deque;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 
 /**
- * внутренний, неэкспортируемый класс.
+ * Посетитель AST, который находит выражения и преобразует их в Expression Tree
  */
-class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
+public final class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
   @Value
   private static class OperatorInCode {
@@ -56,6 +55,18 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
   private BslExpression resultExpression;
   private int recursionLevel = -1;
+
+  /**
+   * Хелпер построения дерева выражения на основе готового AST выражения
+   *
+   * @param ctx AST выражения
+   * @return дерево вычисления выражения
+   */
+  public static BslExpression buildExpressionTree(BSLParser.ExpressionContext ctx) {
+    var instance = new ExpressionTreeBuildingVisitor();
+    instance.visitExpression(ctx);
+    return instance.getExpressionTree();
+  }
 
   /**
    * @return результирующее выражение в виде дерева вычисления операций
@@ -99,7 +110,11 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
     }
 
     var operation = operands.peek();
-    assert operation != null; // для спокойствия сонара
+    // В случае ошибок парсинга выражения, operation может быть null
+    if (operation == null) {
+      recursionLevel--;
+      return ctx;
+    }
 
     if (operation.getRepresentingAst() == null) {
       operation.setRepresentingAst(ctx);
@@ -116,18 +131,28 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
   @Override
   public ParseTree visitMember(BSLParser.MemberContext ctx) {
 
+    // В случае ошибки парсинга member может быть пустой.
+    if (ctx.getChildCount() == 0) {
+      return ctx;
+    }
+
     // нужен ручной dispatch на конкретного child,
     // т.к. нет отдельного правила для подвыражения в скобках
     //  constValue
-    //    | complexIdentifier
-    //    | (( LPAREN expression RPAREN ) modifier*) // нечего оверрайдить !
-    //    | (WAIT_KEYWORD (IDENTIFIER | globalMethodCall))
+      // | complexIdentifier
+      // | (( LPAREN expression RPAREN ) modifier*) // нечего оверрайдить !
+      // | (IDENTIFIER | globalMethodCall)          // нечего оверрайдить !
+      // | waitExpression
 
     var unaryModifier = ctx.unaryModifier();
     var childIndex = 0;
     if (unaryModifier != null) {
       visitUnaryModifier(unaryModifier);
       childIndex = 1;
+    }
+
+    if (ctx.waitExpression() != null) {
+      return visitWaitExpression(ctx.waitExpression());
     }
 
     var dispatchChild = ctx.getChild(childIndex);
@@ -139,18 +164,11 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
         case BSLLexer.LPAREN:
           visitParenthesis(ctx.expression(), ctx.modifier());
           break;
-        case BSLLexer.AWAIT_KEYWORD:
-          visitAwaitedMember(ctx.getChild(childIndex + 1));
-          break;
         default:
           throw new IllegalStateException("Unexpected rule " + dispatchChild);
       }
     } else {
       dispatchChild.accept(this);
-    }
-
-    if (unaryModifier != null) {
-      buildOperation();
     }
 
     return ctx;
@@ -185,12 +203,20 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
       return;
     }
 
-    var lastSeenOperator = operatorsInFly.peek();
-    if (lastSeenOperator.getPriority() > operator.getPriority()) {
+    while (hasHigherPriorityOperatorsInFly(operator)) {
       buildOperation();
     }
 
     operatorsInFly.push(operator);
+  }
+
+  private boolean hasHigherPriorityOperatorsInFly(OperatorInCode operator) {
+    var lastSeenOperator = operatorsInFly.peek();
+    if (lastSeenOperator == null) {
+      return false;
+    }
+
+    return lastSeenOperator.getPriority() > operator.getPriority();
   }
 
   private static BslOperator getOperator(BSLParser.OperationContext ctx) {
@@ -301,7 +327,7 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
     if (typeName == null) {
       // function style
       var typeNameArg = args.get(0);
-      args = args.stream().skip(1).collect(Collectors.toList());
+      args = args.stream().skip(1).toList();
       callNode = ConstructorCallNode.createDynamic(makeSubexpression(typeNameArg.expression()));
     } else {
       // static style
@@ -362,7 +388,7 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
   }
 
   private static BslExpression makeSubexpression(BSLParser.ExpressionContext ctx) {
-    return ExpressionParseTreeRewriter.buildExpressionTree(ctx);
+    return buildExpressionTree(ctx);
   }
 
   private static void addCallArguments(AbstractCallNode callNode, List<? extends BSLParser.CallParamContext> args) {
@@ -387,11 +413,16 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
       var operand = operands.pop();
       var operation = UnaryOperationNode.create(operator.getOperator(), operand, operator.getActualSourceCode());
+      operand.setParent(operation);
       operands.push(operation);
     } else {
       var right = operands.pop();
       var left = operands.pop();
       var binaryOp = BinaryOperationNode.create(operator.getOperator(), left, right, operator.getActualSourceCode());
+
+      left.setParent(binaryOp);
+      right.setParent(binaryOp);
+
       operands.push(binaryOp);
     }
   }
